rubocop/examples/good/Style_CommentIndentation.rb
# TODO: This cops checks the indentation of comments.
