rubocop/examples/bad/style_EmptyLines.rb
# TODO:This cops checks for two or more consecutive blank lines
